# emailer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  emailer.py  requirements.txt  setup.cfg
emailer/: __init__.py  contacts.py  contacts_.py  emailer.py  sender.py  utils.py
futuremail/: __init__.py  contacts.py  drafter.py  message.py  sender.py  utils.py
futuremail/resources/: imap-domains.json  smtp-domains.json  smtp-ports.json
