[metadata]
name = futuremail
url = https://github.com/wheelercj/futuremail
version = 1.0.0
author = Chris Wheeler
description = Send emails with Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = email, smtp, futuremail
classifiers = 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = futuremail
python_requires = >=3.7
package_dir =
    =.
install_requires = requirements.txt

[options.package_data]
futuremail =
    =py.typed
    =LICENSE
    =README.md
    =requirements.txt
