[metadata]
name = futuremail
url = https://github.com/wheelercj/futuremail
version = 1.1.3
author = Chris Wheeler
author_email = christopher.wheeler.320@my.csun.edu
description = Send emails with Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = email, smtp, futuremail
classifiers = 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = futuremail
python_requires = >=3.8
package_dir =
    =.
install_requires = 
    mistune
    openpyxl

[options.package_data]
futuremail =
    =py.typed
    =LICENSE
    =README.md
